# plugins

./: pyproject.toml
plugins/: __init__.py  context.py
plugins/modules/: __init__.py  example.py
plugins/modules/example/: exmaple.py
src/plugins/: __init__.py
