[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plugins"
version = "0.1
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TheTeamVivek" }
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["plugins"]
